--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
- GREENLIGHT_DB_DSN="postgres://greenlight:password@localhost/greenlight?sslmode=disable"
+GREENLIGHT_DB_DSN=postgres://greenlight:password@localhost/greenlight?sslmode=disable
